--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -93,7 +93,6 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
-set_real_ip_from 107.21.184.1;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -114,6 +113,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 118.163.74.160;
+set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -243,6 +243,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
@@ -250,6 +251,7 @@ set_real_ip_from 185.112.146.168;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
+set_real_ip_from 185.129.61.129;
 set_real_ip_from 185.129.61.2;
 set_real_ip_from 185.129.61.3;
 set_real_ip_from 185.129.61.4;
@@ -281,6 +283,7 @@ set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.189.167.171;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.193.66.127;
@@ -661,6 +664,7 @@ set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
+set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.12.111.102;
 set_real_ip_from 198.144.178.163;
@@ -795,6 +799,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
+set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -1349,7 +1354,6 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
-set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1687,6 +1691,7 @@ set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.208.225;
+set_real_ip_from 45.81.242.8;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.9.148.219;
@@ -1753,6 +1758,7 @@ set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 54.144.0.69;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1917,7 +1923,6 @@ set_real_ip_from 94.103.124.121;
 set_real_ip_from 94.103.124.46;
 set_real_ip_from 94.103.124.90;
 set_real_ip_from 94.103.124.91;
-set_real_ip_from 94.103.124.98;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
