--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -103,6 +103,7 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
+set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -465,7 +466,6 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
-set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
 set_real_ip_from 2a05:b0c7:6949::1;
