--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -692,6 +692,7 @@ deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
+deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
