--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -22,7 +22,9 @@ deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
+deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
+deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -114,6 +116,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -331,6 +334,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2800:ba0:6:c1::4858;
@@ -702,7 +706,6 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
-deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
