--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -8,7 +8,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -638,6 +637,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
@@ -1593,6 +1593,7 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
@@ -1723,7 +1724,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.45.200.178;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.103.190;
@@ -1760,6 +1760,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.89.166.219;
 allow 5.61.51.143;
 allow 57.129.20.162;
 allow 5.79.66.19;
@@ -1788,6 +1789,7 @@ allow 77.221.159.192;
 allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.232.143.248;
+allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.236;
 allow 77.48.28.237;
@@ -1823,6 +1825,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.51;
 allow 84.252.122.130;
 allow 84.38.134.230;
 allow 84.38.134.231;
