--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -8,6 +8,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -37,7 +38,6 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.195;
-allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
 allow 107.174.138.172;
@@ -1257,6 +1257,7 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1334,6 +1335,8 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1634,6 +1637,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.223.195.42;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1668,6 +1672,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.151.122.34;
 allow 45.151.167.10;
 allow 45.151.167.11;
 allow 45.151.167.12;
@@ -1724,7 +1729,10 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1760,7 +1768,6 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.89.166.219;
 allow 5.61.51.143;
 allow 57.129.20.162;
 allow 5.79.66.19;
