--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -369,6 +369,7 @@ deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
+deny 2a02:c206:2095:2624::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -446,6 +447,8 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
