--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -132,7 +132,10 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
+deny 2602:fc24:12:77c0::1;
 deny 2602:fc24:12:81a6::1;
+deny 2602:fc24:12:a679::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:95b7::1;
@@ -360,7 +363,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e03::f03c:94ff:fe7d:8250;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
-deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
